logs/Slang/generated/hdlconv/hdlconvertor_p490.sv.log
name: hdlconvertor_p490
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:2:1: error: expected member
checker check_in_context (logic test_sig,
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:2:42: error: expected identifier
checker check_in_context (logic test_sig,
                                         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:3:27: error: expected declarator
                          event clock = $inferred_clock,
                          ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:3:32: error: expected ','
                          event clock = $inferred_clock,
                               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:3:41: error: use of undeclared identifier '$inferred_clock'
                          event clock = $inferred_clock,
                                        ^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:3:57: error: expected identifier
                          event clock = $inferred_clock,
                                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:4:27: error: expected declarator
                          logic reset = $inferred_disable);
                          ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:4:32: error: expected ','
                          logic reset = $inferred_disable);
                               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:4:41: error: use of undeclared identifier '$inferred_disable'
                          logic reset = $inferred_disable);
                                        ^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:4:58: error: expected declarator
                          logic reset = $inferred_disable);
                                                         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:7:3: error: language feature not yet supported
  a1: assert property (@clock disable iff (reset) p(test_sig));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:8:3: error: language feature not yet supported
  c1: cover property (@clock !reset throughout !test_sig ##1 test_sig);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:9:1: error: expected member
endchecker : check_in_context
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:16:3: error: unknown module 'check_in_context'
  check_in_context my_check1(.test_sig(b), .clock(clk), .reset(rst));
  ^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:20:7: error: use of undeclared identifier 'check_in_context'
      check_in_context my_check2(a);
      ^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:20:33: error: expected declarator
      check_in_context my_check2(a);
                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:20:34: error: expected ','
      check_in_context my_check2(a);
                                 ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p490.sv:20:35: error: expected declarator
      check_in_context my_check2(a);
                                  ^
